chore: Devtools is web-component only
Otherwise we'd have to sync the React version used
in the wrapper, so might as well embrace web components
and maintain only one frameworkless interface.

--- a/packages/devtools/src/host/app.css
+++ b/packages/devtools/src/host/app.css
@@ -1,6 +1,8 @@
 html {
-    font-family: 'Comic Sans MS';
-    margin: 0;
-    position: relative;
-    height: 100vh;
+  margin: 0;
+  position: relative;
+  height: 100vh;
+  /* make style leakages stand out */
+  font-family: 'Comic Sans MS';
+  color: red;
 }
